--- a/views/posts.pug
+++ b/views/posts.pug
@@ -21,22 +21,25 @@ html(lang="ja")
 
     h2 投稿一覧
     each post in posts
-      - let isPostedByAdmin = (post.postedBy === 'admin')
-      if isPostedByAdmin = (post.postedBy === 'admin')
-        h3 #{post.id} : 管理人 ★
-      else
-        h3 #{post.id} : ID:#{post.trackingCookie}
-      p!=post.content
-      p 投稿日時: #{post.createdAt}
-      - let isAdmin = (user === 'admin')
-      if isAdmin 
-        p 投稿者: #{post.postedBy}
-      - let isDeletable = (user === post.postedBy || isAdmin)
-      if isDeletable 
-        form(method="post" action="/posts?delete=1")
-          input(type="hidden" name="id" value=post.id)
-          button(type="submit") 削除
-      hr
+      div.card.my-3
+        div.card-header
+          - let isPostedByAdmin = (post.postedBy === 'admin')
+          if isPostedByAdmin = (post.postedBy === 'admin')
+            span #{post.id} : 管理人 ★
+          else
+            span #{post.id} : ID:#{post.trackingCookie}
+        div.card-body
+          p.card-text!=post.content
+        div.card-footer
+          div 投稿日時: #{post.createdAt}
+          - let isAdmin = (user === 'admin')
+          if isAdmin 
+            div 投稿者: #{post.postedBy}
+          - let isDeletable = (user === post.postedBy || isAdmin)
+          if isDeletable 
+            form(method="post" action="/posts?delete=1")
+              input(type="hidden" name="id" value=post.id)
+              button(type="submit").btn.btn-danger.float-right 削除
 
     script(src="https://code.jquery.com/jquery-3.4.1.slim.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js",
